# nissy-fmc

./: .gitignore  Makefile  README.md  TODO.md
cli/: main.c
flutter/: pubspec.yaml
flutter/lib/: main.dart
flutter_ffi/: ffigen.yaml  pubspec.yaml
flutter_ffi/example/: pubspec.yaml
flutter_ffi/example/lib/: main.dart
flutter_ffi/lib/: nissy_flutter_ffi.dart
flutter_ffi/src/: CMakeLists.txt
src/: alg.c  alg.h  coord.c  coord.h  cube.c  cube.h  env.c  env.h  main.c  nissy.c  nissy.h  pruning.c  pruning.h  solve.c  solve.h  steps.c  steps.h
